# BipLab

./: .gitignore  CMakeLists.txt  Makefile  README.md  main.c
include/: NeuralNetwork.h  cell.h  checkpoint.h  collisions.h  config.h  embedded_resources.h  evolution.h  food.h  game.h  graph.h  grid.h  neuralNetwork.h  popup.h  utils.h  wall.h
include/ai/: evolution.h  neuralNetwork.h
include/core/: config.h  game.h  string_utils.h  utils.h
include/entities/: cell.h  food.h  wall.h
include/graph/: graphWindow.h  neuralNetworkRender.h
include/system/: gpu_utils.h  hardware_monitor.h  performance.h
include/ui/: ui.h  ui_utils.h
include/ui/components/: button.h  progressbar.h  realtime_graph.h  system_info.h
include/ui/graph/: graphEvolution.h  graphEvolutionWindow.h  neuralNetworkRender.h
include/ui/interfaces/: gameInterface.h  trainingInterface.h
ressources/: best.nn
src/: NeuralNetwork.c  cell.c  checkpoint.c  collisions.c  embedded_resources.c  evolution.c  food.c  game.c  graph.c  grid.c  main.c  neuralNetwork.c  popup.c  utils.c  wall.c
src/ai/: evolution.c  neuralNetwork.c
src/cell/: collisions.c  create.c  end.c  render.c  update.c
src/core/: string_utils.c  utils.c
src/core/game/: events.c  renders.c  reset.c  resize.c  start.c  storage.c  update.c
src/entities/: food.c  wall.c
src/entities/cell/: collisions.c  create.c  end.c  render.c  update.c
src/game/: events.c  renders.c  reset.c  resize.c  start.c  storage.c  trainingDashboard.c  update.c
src/graph/: graph.c  graphWindow.c  neuralNetworkRender.c
src/system/: checkpoint.c  embedded_resources.c  gpu_utils.c  hardware_monitor.c  performance.c
src/ui/: popup.c  screens.c  ui_utils.c
src/ui/components/: button.c  progressbar.c  realtime_graph.c  system_info.c
src/ui/graph/: graph.c  graphWindow.c  neuralNetworkRender.c
src/ui/interfaces/: gameInterface.c  trainingInterface.c
